--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/vue3-ace-editor/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vue3-ace-editor Demo</title>
-    <script type="module" crossorigin src="/assets/index.9a03e266.js"></script>
-    <link rel="modulepreload" href="/assets/vendor.7317da2a.js">
-    <link rel="stylesheet" href="/assets/index.a6a028fb.css">
+    <script type="module" crossorigin src="/vue3-ace-editor/assets/index.9a03e266.js"></script>
+    <link rel="modulepreload" href="/vue3-ace-editor/assets/vendor.7317da2a.js">
+    <link rel="stylesheet" href="/vue3-ace-editor/assets/index.a6a028fb.css">
   </head>
   <body>
     <div id="app"></div>
