Make outline tree a separate component

--- a/demo-source/index.html
+++ b/demo-source/index.html
@@ -22,6 +22,9 @@
       font-family: system-ui;
       -webkit-font-smoothing: antialiased;
       -moz-osx-font-smoothing: grayscale;
+      display: flex;
+      flex-direction: column;
+      padding: 15px;
     }
 
   </style>
